--- a/src/components/Product/styles.css
+++ b/src/components/Product/styles.css
@@ -10,6 +10,12 @@
     margin: 20px 10px;
 }
 
+.product:hover{
+    -webkit-box-shadow: 0px 0px 8px 1px #292828;
+  -moz-box-shadow: 0px 0px 8x 1px #292828;
+  box-shadow: 0px 0px 8px 1px #292828;
+}
+
 .product .div-img{
     width: 200px;
     height: 180px;
