--- a/src/components/UserCart/styles.css
+++ b/src/components/UserCart/styles.css
@@ -21,10 +21,26 @@
 .cart-items{
     padding: 30px 0 0 30px;
     height: 40px;
+    display: flex;
 }
 
 .cart-list li+li{
     border-top: 1px solid #3d3d3d;
+}
+
+.data{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.image{
+    width: 50px;
+}
+
+.data p{
+    white-space: nowrap;
+    display: block;
 }
 
 .total{
