--- a/src/components/UserCart/styles.css
+++ b/src/components/UserCart/styles.css
@@ -7,7 +7,7 @@
 .cart{
     margin: 0 auto;
     min-height: 400px;
-    width: 60%;
+    width: 70%;
     border: 1px solid black;
     border-radius:30px;
     display: flex;
@@ -19,9 +19,11 @@
 }
 
 .cart-items{
-    padding: 30px 0 0 30px;
-    height: 40px;
+    padding-left: 15px;
+    height: 80px;
     display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 .cart-list li+li{
@@ -30,20 +32,89 @@
 
 .data{
     display: flex;
-    justify-content: space-between;
-    width: 80%;
+    
+}
+
+
+
+.quantity{
+    margin-right: 70px;
 }
 
 .image{
     width: 50px;
+    margin-right: 10px;
 }
+
 
 .data p{
     white-space: nowrap;
-    display: block;
+    width: 100%;
+    font-size: 1.2em;
+}
+
+.data p+p{
+    margin-left: 30px;
+}
+
+.product_name{
+    width: 40px;
+    margin-right: 20px;
 }
 
 .total{
     width: 30%;
     border-left: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-size: 1.3em;
+    font-weight: bold;
+
+}
+
+.total .subtotal_price, .descount, .total_price, .div-input-cupom, .div-btn{
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+
+input{
+    height: 25px;
+    outline: none;
+    border-radius: 5px;
+}
+
+#submit{
+    background-color: green;
+    padding-left: 0;
+    width: 40px;
+    
+}
+
+#cupom{
+    
+    width: 120px;
+    margin-right: 15px;
+}
+
+.msg{
+    height: 0.7em;
+    color: rgb(52, 216, 30);
+    font-size: 0.7em;
+    margin-left: 0;
+}
+
+.msg-div{
+    margin-left: 0;
+}
+
+.btn{
+    width: 120px;
+    height: 35px;
+    border-radius: 20px;
+    cursor: pointer;
+    background-color:darkred;
+    text-align: center;
+    color: #fff;
+
 }
