--- a/src/components/Menu/styles.css
+++ b/src/components/Menu/styles.css
@@ -15,6 +15,7 @@
 
 .page{
     cursor: pointer;
+    height: 100%;
     padding: 0 10px;
     color: #fff;
     text-decoration: none;
@@ -23,6 +24,10 @@
 .page:hover{
     color:rgb(82, 33, 33);
     text-decoration: none;
+}
+
+.active{
+    color: rgb(82, 33, 33);
 }
 
 
