--- a/src/components/Modal/styles.css
+++ b/src/components/Modal/styles.css
@@ -1,7 +1,6 @@
 .modal{
     width: 100%;
-    height: 100vmax;
-    position: absolute;
+    position:fixed;
     top: 0;
     left: 0;
     z-index: 10;
