--- a/src/components/UserCart/styles.css
+++ b/src/components/UserCart/styles.css
@@ -7,14 +7,14 @@
 .cart{
     margin: 0 auto;
     min-height: 400px;
-    width: 70%;
+    width: 80%;
     border: 1px solid black;
     border-radius:30px;
     display: flex;
 }
 
 .cart-list{
-    width: 70%;
+    width: 80%;
     list-style: none;
 }
 
@@ -52,15 +52,20 @@
     white-space: nowrap;
     width: 100%;
     font-size: 1.2em;
+    margin-left: 20px;
+}
+
+.unit_price{
+    margin-right: 20px;
 }
 
 .data p+p{
-    margin-left: 30px;
+    margin-left: 20px;
 }
 
 .product_name{
     width: 40px;
-    margin-right: 20px;
+    margin-right: 40px;
 }
 
 .total{
