--- a/src/components/StoryComp/styles.css
+++ b/src/components/StoryComp/styles.css
@@ -10,8 +10,17 @@
 
 
 .img-story{
-    margin-left: 30px;
+    margin: 30px 0 30px 30px;
+    
     width: 500px;
+}
+
+.img-story img{
+    width: 500px;
+}
+
+.img-story img+img{
+    margin-top: 30px;
 }
 .first{
     display: flex;
@@ -26,10 +35,11 @@
 }
 
 .text-story p{
-    font-size: 1.1em;
+    font-size: 1.3em;
 }
 
 .text-story h2{
+    font-size: 2.2em;
     color: darkred;
     margin-bottom: 15px;
 }
